traces/bug_896.txt
examples++-load/iovtk.cpp:4036: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/iovtk.cpp:4036:1: initialization of callDoLoadInit
4034.     
4035.   }
4036. > LOADFUNC(Load_Init)

examples++-load/iovtk.cpp:4036:1: call to DoLoadInit
4034.     
4035.   }
4036. > LOADFUNC(Load_Init)

examples++-load/iovtk.cpp:4036:1: call to addInitFunct
  4034.     
  4035.   }
  4036. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
